RAFD-4052 : data prep css fix (#365)
* RAFD-3917: dataprep layout issues

(cherry picked from commit ee488c456f7124d8a36e5581d0cea4c8973aa917)

* RAFD-3917: dataprep refined css layout

(cherry picked from commit e7188ac4546211b4d4870a640fc72192965ade0b)

* RAFD-4052: css fix for data-prep

(cherry picked from commit 4379ac1830861430d07235b479a17e803b219921)

--- a/cdap-ui/app/cdap/components/DataPrep/DataPrep.scss
+++ b/cdap-ui/app/cdap/components/DataPrep/DataPrep.scss
@@ -84,6 +84,16 @@ $toggle-btn-disabled-bg-color: #cccccc;
 
     .dataprep-main {
       height: 100%;
+      display: flex;
+      > .row {
+        margin: 0;
+        height: 100%;
+      }
+    }
+
+    .dataprep-main-content {
+      height: 100%;
+      width: calc(100vw - 540px);
       > .row {
         margin: 0;
         height: 100%;
